# sourcextractor

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
sourcextractor/: main.py
