[project]
name = "sourcextractor"
version = "0.0.1"
authors = [
  { name="rmonvfer", email="ramonvilafer <at> proton <dot> me " },
]
description = "A source extractor for modern web applications"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/rmonvfer/sourcextractor"
"Bug Tracker" = "https://github.com/rmonvfer/sourcextractor/issues"